# plico

./: Cargo.toml  README.md
.github/workflows/: tests.yml
benches/: solver_benchmarks.rs
examples/: degrees_of_separation.rs  house_puzzle.rs  magic_square.rs  map_colouring.rs  n_queens.rs  simple_budget.rs  sudoku.rs
src/: error.rs  lib.rs
src/examples/: map_colouring.rs  mod.rs  suduko.rs
src/solver/: constraint.rs  engine.rs  mod.rs  semantics.rs  solution.rs  stats.rs  strategy.rs  value.rs  work_list.rs
src/solver/constraints/: abs_diff_not_equal.rs  all_different.rs  boolean_or.rs  equal.rs  mod.rs  not_equal.rs  reified_and.rs  reified_equal.rs  reified_member_of.rs  reified_or.rs  sum_of.rs
src/solver/heuristics/: mod.rs  restart.rs  value.rs  variable.rs
