[package]
name = "plico"
version = "0.1.0"
edition = "2021"
description = "A generic, modular constraint satisfaction problem (CSP) solver."
license = "Apache-2.0"
repository = "https://github.com/robknight/plico"
readme = "README.md"
keywords = ["constraint", "solver", "csp", "logic", "puzzle"]
categories = ["algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "plico"
path = "src/lib.rs"

[dependencies]
im = { version = "15.1.0", features = ["serde"] }
thiserror = "1.0.50"
tracing = "0.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
proptest = "1.6.0"
sudoku = "0.8.0"
tracing-subscriber = "0.3"

