[package]
name = "plico"
version = "0.1.0"
edition = "2021"
description = "A generic, modular constraint satisfaction problem (CSP) solver."
license = "Apache-2.0"
repository = "https://github.com/robknight/plico"
readme = "README.md"
keywords = ["constraint", "solver", "csp", "logic", "puzzle"]
categories = ["algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "plico"
path = "src/lib.rs"

[dependencies]
im = { version = "15.1.0", features = ["serde"] }
thiserror = "1.0.50"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
clap = { version = "4.4.2", features = ["derive"] }
prettytable-rs = "0.10.0"
rand_chacha = "0.3.1"
log = "0.4.21"
rand_core = "0.6.4"

[dev-dependencies]
criterion = "0.5.1"
pretty_assertions = "1.4.1"
sudoku = "0.8.0"
proptest = "=1.4.0"

[[bench]]
name = "solver_benchmarks"
harness = false

